class名の変更 rem2→Mrem2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,15 +233,15 @@ h2:after {
   margin-left: auto;
 }
 
-.rem2t {
+.Mrem2t {
   margin-top: 2rem;
 }
 
-.rem2b {
+.Mrem2b {
   margin-bottom: 2rem;
 }
 
-.rem2 {
+.Mrem2 {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
