--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
   border-radius: 25px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.39);
   background-color: var(--main-backcolor);
-  padding: 5px 30px 30px;
+  padding: 5px 30px 39px;
   position: relative;
 }
 
@@ -320,7 +320,8 @@ h2:after {
 }
 
 .sousin {
-  margin-top: 6px;
+  margin-top: 8px;
+  font-size: large;
 }
 
 .btn-flat-border {
@@ -339,32 +340,6 @@ h2:after {
 .btn-flat-border:hover {
   background: var(--main-Accentcolor);
   color: white;
-}
-
-.btn-border-bottom {
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-  padding: 0.25em 0;
-  text-decoration: none;
-  color: var(--main-Accentcolor);
-}
-
-.btn-border-bottom:before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 4px;
-  top: 100%;
-  left: 0;
-  border-radius: 3px;
-  background: var(--main-Accentcolor);
-  transition: 0.2s;
-}
-
-.btn-border-bottom:hover:before {
-  top: -webkit-calc(100% - 3px);
-  top: calc(100% - 3px);
 }
 
 .sumaho-waku .sumaho-moji,
